--- a/action.yml
+++ b/action.yml
@@ -33,7 +33,7 @@ inputs:
 
 runs:
   using: docker
-  image: ghcr.io/thematchless/bump-image-version-action:latest
+  image: docker://thematchless/bump-image-version-action:latest
 
 branding:
   icon: send
